Trying to fix overlapping

--- a/homework/Homework-1/flask_app/static/piano/css/piano.css
+++ b/homework/Homework-1/flask_app/static/piano/css/piano.css
@@ -28,6 +28,7 @@ body {
 
     padding: 3%;
     margin-bottom: 10%;
+    opacity: 0%;
 
 }
 
@@ -44,14 +45,13 @@ body {
     width: 55%; 
     height: 55%;
     top: 15%;
-    opacity: 0; /* So my old one image does not appear */
+    opacity: 100; /* So my old one image does not appear */
 
 
 }
 .old-one {
     position: absolute;
     
-    z-index: -3;
     width: 100%; 
     height: 100%; 
     border-radius: 10% 10% 0 0;
@@ -59,13 +59,11 @@ body {
 }
 
 .Old-one-text {
-    z-index: -3;
     color:#fff;
     position: absolute;
+    top: 10%
     
 }
-
-
 
 .keys {
     display: flex;
@@ -78,7 +76,11 @@ body {
 
 }
 
+.poem {
+    text-align: center;
+    text-justify: inter-word;
 
+}
 
 .white-key, .black-key {
     border-radius: 5% 5% 5% 5%;
